--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>NHATRO.COM</title>
+<title>NHATTRO.COM</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="Unicat project">
@@ -58,15 +58,15 @@
 						<div class="header_content d-flex flex-row align-items-center justify-content-start">
 							<div class="logo_container">
 								<a href="#">
-									<div class="logo_text">NHATRO.COM</div>
+									<div class="logo_text">NHATTRO.COM</div>
 								</a>
 							</div>
 							<nav class="main_nav_contaner ml-auto">
 								<ul class="main_nav">
 									<li class="active"><a href="#">TỔNG QUÁT</a></li>
 									<li><a href="about.html">NHÀ TRỌ</a></li>
-									<li><a href="courses.html">KỸ NĂNG MỀM</a></li>
-									<li><a href="blog.html">BLOG</a></li>
+									<li><a href="courses.html">KỸ NĂNG</a></li>
+									<li><a href="blog.html">GHÉP</a></li>
 									<li><a href="contact.html">LIÊN HỆ</a></li>
 								</ul>
 								<div class="search_button"><i class="fa fa-search" aria-hidden="true"></i></div>
@@ -119,8 +119,8 @@
 			<ul class="menu_mm">
 				<li class="menu_mm"><a href="index.html">TỔNG QUÁT</a></li>
 				<li class="menu_mm"><a href="#">NHÀ TRỌ</a></li>
-				<li class="menu_mm"><a href="#">KỸ NĂNG MỀM</a></li>
-				<li class="menu_mm"><a href="#">Blog</a></li>
+				<li class="menu_mm"><a href="#">KỸ NĂNG</a></li>
+				<li class="menu_mm"><a href="#">GHÉP</a></li>
 				<li class="menu_mm"><a href="contact.html">LIÊN HỆ</a></li>
 			</ul>
 		</nav>
@@ -141,7 +141,7 @@
 						<div class="container">
 							<div class="row">
 								<div class="col text-center">
-									<div class="home_slider_title">ĐỘI NGŨ HỆ THỐNG NHATRO.COM</div>
+									<div class="home_slider_title">ĐỘI NGŨ HỆ THỐNG NHATTRO.COM</div>
 									<div class="home_slider_subtitle">THẤU HIỂU</div>
 								</div>
 							</div>
@@ -156,7 +156,7 @@
 						<div class="container">
 							<div class="row">
 								<div class="col text-center">
-									<div class="home_slider_title">ĐỘI NGŨ HỆ THỐNG NHATRO.COM</div>
+									<div class="home_slider_title">ĐỘI NGŨ HỆ THỐNG NHATTRO.COM</div>
 									<div class="home_slider_subtitle">CẢM NHẬN</div>
 								</div>
 							</div>
@@ -171,7 +171,7 @@
 						<div class="container">
 							<div class="row">
 								<div class="col text-center">
-									<div class="home_slider_title">ĐỘI NGŨ HỆ THỐNG NHATRO.COM</div>
+									<div class="home_slider_title">ĐỘI NGŨ HỆ THỐNG NHATTRO.COM</div>
 									<div class="home_slider_subtitle">GIÚP ĐỠ</div>
 								</div>
 							</div>
@@ -228,7 +228,7 @@
 		</form>
 	</div>
 
-	<!-- Popular Courses -->
+	<!-- Nhà Trọ Nỗi Bậc -->
 
 	<div class="courses">
 		<div class="section_background parallax-window" data-parallax="scroll" data-image-src="images/courses_background.jpg" data-speed="0.8"></div>
@@ -246,25 +246,25 @@
 				<!-- Course -->
 				<div class="col-lg-4 course_col">
 					<div class="course">
-						<div class="course_image"><img src="images/course_1.jpg" alt=""></div>
+						<div class="course_image"><img src="images/NhaTro1.jpg" width="100%" height="400px" alt=""></div>
 						<div class="course_body">
-							<h3 class="course_title"><a href="course.html">Software Training</a></h3>
-							<div class="course_teacher">Mr. John Taylor</div>
+							<h3 class="course_title"><a href="course.html">KTX Cao Cấp</a></h3>
+							<div class="course_teacher">Phạm Thị Hoa</div>
 							<div class="course_text">
-								<p>Lorem ipsum dolor sit amet, consectetur adipi elitsed do eiusmod tempor</p>
+								<p>Số 84 Giải Phóng, Phường 4, Quận Tân Bình</p>
 							</div>
 						</div>
 						<div class="course_footer">
 							<div class="course_footer_content d-flex flex-row align-items-center justify-content-start">
 								<div class="course_info">
 									<i class="fa fa-graduation-cap" aria-hidden="true"></i>
-									<span>20 Student</span>
+									<span>20 Phòng</span>
 								</div>
 								<div class="course_info">
 									<i class="fa fa-star" aria-hidden="true"></i>
-									<span>5 Ratings</span>
+									<span>5 Sao</span>
 								</div>
-								<div class="course_price ml-auto">$130</div>
+								<div class="course_price ml-auto">450K</div>
 							</div>
 						</div>
 					</div>
@@ -273,25 +273,25 @@
 				<!-- Course -->
 				<div class="col-lg-4 course_col">
 					<div class="course">
-						<div class="course_image"><img src="images/course_2.jpg" alt=""></div>
+						<div class="course_image"><img src="images/NhaTro2.jpg"  width="100%" height="400px" alt=""></div>
 						<div class="course_body">
-							<h3 class="course_title"><a href="course.html">Developing Mobile Apps</a></h3>
-							<div class="course_teacher">Ms. Lucius</div>
+							<h3 class="course_title"><a href="course.html">Phòng cho thuê như căn hộ mini</a></h3>
+							<div class="course_teacher">Phạm Hữu Nam</div>
 							<div class="course_text">
-								<p>Lorem ipsum dolor sit amet, consectetur adipi elitsed do eiusmod tempor</p>
+								<p>26/42 Tân Sơn Nhì, p.Tân Sơn Nhì, Q.Tân Phú, TP.HCM ,</p>
 							</div>
 						</div>
 						<div class="course_footer">
 							<div class="course_footer_content d-flex flex-row align-items-center justify-content-start">
 								<div class="course_info">
 									<i class="fa fa-graduation-cap" aria-hidden="true"></i>
-									<span>20 Student</span>
+									<span>5 Phòng</span>
 								</div>
 								<div class="course_info">
 									<i class="fa fa-star" aria-hidden="true"></i>
-									<span>5 Ratings</span>
+									<span>5 Sao</span>
 								</div>
-								<div class="course_price ml-auto">Free</div>
+								<div class="course_price ml-auto">4000K</div>
 							</div>
 						</div>
 					</div>
@@ -300,25 +300,25 @@
 				<!-- Course -->
 				<div class="col-lg-4 course_col">
 					<div class="course">
-						<div class="course_image"><img src="images/course_3.jpg" alt=""></div>
+						<div class="course_image"><img src="images/NhaTro3.jpg"  width="100%" height="400px" alt="" ></div>
 						<div class="course_body">
-							<h3 class="course_title"><a href="course.html">Starting a Startup</a></h3>
-							<div class="course_teacher">Mr. Charles</div>
+							<h3 class="course_title"><a href="course.html">Phòng Trọ giá rẻ</a></h3>
+							<div class="course_teacher">Nguyễn Hoàng Long</div>
 							<div class="course_text">
-								<p>Lorem ipsum dolor sit amet, consectetur adipi elitsed do eiusmod tempor</p>
+								<p>Cuối Hẻm 44 Ngô Tất Tố, phường 19, quận Bình Thạnh, 19, Bình Thạnh, Hồ Chí Minh</p>
 							</div>
 						</div>
 						<div class="course_footer">
 							<div class="course_footer_content d-flex flex-row align-items-center justify-content-start">
 								<div class="course_info">
 									<i class="fa fa-graduation-cap" aria-hidden="true"></i>
-									<span>20 Student</span>
+									<span>1 Phòng</span>
 								</div>
 								<div class="course_info">
 									<i class="fa fa-star" aria-hidden="true"></i>
-									<span>5 Ratings</span>
+									<span>5 Sao</span>
 								</div>
-								<div class="course_price ml-auto"><span>$320</span>$220</div>
+								<div class="course_price ml-auto">220K</div>
 							</div>
 						</div>
 					</div>
@@ -327,80 +327,14 @@
 			</div>
 			<div class="row">
 				<div class="col">
-					<div class="courses_button trans_200"><a href="#">view all courses</a></div>
+					<div class="courses_button trans_200"><a href="#">Xem Thêm...</a></div>
 				</div>
 			</div>
 		</div>
 	</div>
 
-	<!-- Counter -->
-
-	<div class="counter">
-		<div class="counter_background" style="background-image:url(images/counter_background.jpg)"></div>
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-6">
-					<div class="counter_content">
-						<h2 class="counter_title">Register Now</h2>
-						<div class="counter_text"><p>Simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s standard dumy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
-
-						<!-- Milestones -->
-
-						<div class="milestones d-flex flex-md-row flex-column align-items-center justify-content-between">
-							
-							<!-- Milestone -->
-							<div class="milestone">
-								<div class="milestone_counter" data-end-value="15">0</div>
-								<div class="milestone_text">years</div>
-							</div>
-
-							<!-- Milestone -->
-							<div class="milestone">
-								<div class="milestone_counter" data-end-value="120" data-sign-after="k">0</div>
-								<div class="milestone_text">years</div>
-							</div>
-
-							<!-- Milestone -->
-							<div class="milestone">
-								<div class="milestone_counter" data-end-value="670" data-sign-after="+">0</div>
-								<div class="milestone_text">years</div>
-							</div>
-
-							<!-- Milestone -->
-							<div class="milestone">
-								<div class="milestone_counter" data-end-value="320">0</div>
-								<div class="milestone_text">years</div>
-							</div>
-
-						</div>
-					</div>
-
-				</div>
-			</div>
-
-			<div class="counter_form">
-				<div class="row fill_height">
-					<div class="col fill_height">
-						<form class="counter_form_content d-flex flex-column align-items-center justify-content-center" action="#">
-							<div class="counter_form_title">courses now</div>
-							<input type="text" class="counter_input" placeholder="Your Name:" required="required">
-							<input type="tel" class="counter_input" placeholder="Phone:" required="required">
-							<select name="counter_select" id="counter_select" class="counter_input counter_options">
-								<option>Choose Subject</option>
-								<option>Subject</option>
-								<option>Subject</option>
-								<option>Subject</option>
-							</select>
-							<textarea class="counter_input counter_text_input" placeholder="Message:" required="required"></textarea>
-							<button type="submit" class="counter_form_button">submit now</button>
-						</form>
-					</div>
-				</div>
-			</div>
-
-		</div>
-	</div>
-
+	
+	
 	<!-- Events -->
 
 	<div class="events">
@@ -409,7 +343,7 @@
 				<div class="col">
 					<div class="section_title_container text-center">
 						<h2 class="section_title">KỸ NĂNG CẦN THIẾT</h2>
-						<div class="section_subtitle"><p>Kỹ năng cần thiết - KỸ NĂNG MỀM là kênh riêng biệt của đội ngũ NHATRO.COM nhằm giới thiệu các bạn những kỹ năng cần thiết. Đặc biệt là với sinh viên</p></div>
+						<div class="section_subtitle"><p>Kỹ năng cần thiết - KỸ NĂNG MỀM là kênh riêng biệt của đội ngũ NHATTRO.COM nhằm giới thiệu các bạn những kỹ năng cần thiết. Đặc biệt là với sinh viên</p></div>
 					</div>
 				</div>
 			</div>
@@ -502,7 +436,7 @@
 			<div class="row">
 				<div class="col">
 					<div class="section_title_container text-center">
-						<h2 class="section_title">ĐỘI NGŨ PHÁT TRIỂN NHATRO.COM</h2>
+						<h2 class="section_title">ĐỘI NGŨ PHÁT TRIỂN NHATTRO.COM</h2>
 					<!--	<div class="section_subtitle"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel gravida arcu. Vestibulum feugiat, sapien ultrices fermentum congue, quam velit venenatis sem</p></div>-->
 					</div>
 				</div>
@@ -684,7 +618,7 @@
 						<!-- Newsletter Content -->
 						<div class="newsletter_content text-lg-left text-center">
 							<div class="newsletter_title">CẢM NHẬN - THẤU HIỂU - GIÚP ĐỠ</div>
-							<div class="newsletter_subtitle">CỘNG ĐỒNG PHÁT TRIỂN NHATRO.COM</div>
+							<div class="newsletter_subtitle">CỘNG ĐỒNG PHÁT TRIỂN NHATTRO.COM</div>
 						</div>
 
 						<!-- Newsletter Form -->
@@ -717,7 +651,7 @@
 								<div class="footer_section footer_about">
 									<div class="footer_logo_container">
 										<a href="#">
-											<div class="footer_logo_text">NHATRO.COM</div>
+											<div class="footer_logo_text">NHATTRO.COM</div>
 										</a>
 									</div>
 									<div class="footer_about_text">
