--- a/index.html
+++ b/index.html
@@ -63,9 +63,8 @@
 								<ul class="main_nav">
 									<li class="active"><a href="#">TỔNG QUÁT</a></li>
 									<li><a href="about.html">NHÀ TRỌ</a></li>
-									<li><a href="courses.html">KỸ NĂNG</a></li>
 									<li><a href="blog.html">GHÉP</a></li>
-									<li><a href="contact.html">LIÊN HỆ</a></li>
+									<li><a href="courses.html">LÀM THÊM</a></li>
 								</ul>
 								<div class="search_button"><i class="fa fa-search" aria-hidden="true"></i></div>
 
@@ -117,9 +116,8 @@
 			<ul class="menu_mm">
 				<li class="menu_mm"><a href="index.html">TỔNG QUÁT</a></li>
 				<li class="menu_mm"><a href="#">NHÀ TRỌ</a></li>
-				<li class="menu_mm"><a href="#">KỸ NĂNG</a></li>
 				<li class="menu_mm"><a href="#">GHÉP</a></li>
-				<li class="menu_mm"><a href="contact.html">LIÊN HỆ</a></li>
+				<li class="menu_mm"><a href="#">LÀM THÊM</a></li>
 			</ul>
 		</nav>
 	</div>
@@ -321,87 +319,90 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-4 course_col">
-					<div class="course">
-						<div class="course_image"><img src="images/NhaTro1.jpg"  alt=""></div>
-						<div class="course_body">
-							<h3 class="course_title"><a href="course.html">KTX Cao Cấp</a></h3>
-							<div class="course_teacher">Phạm Thị Hoa</div>
-							<div class="course_text">
-								<p>Số 84 Giải Phóng, Phường 4, Quận Tân Bình</p>
-							</div>
-						</div>
-						<div class="course_footer">
-							<div class="course_footer_content d-flex flex-row align-items-center justify-content-start">
-								<div class="course_info">
-									<i class="fa fa-graduation-cap" aria-hidden="true"></i>
-									<span>20 Phòng</span>
-								</div>
-								<div class="course_info">
-									<i class="fa fa-star" aria-hidden="true"></i>
-									<span>5 Sao</span>
-								</div>
-								<div class="course_price ml-auto">450K</div>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<!-- Course -->
-				<div class="col-lg-4 course_col">
-					<div class="course">
-						<div class="course_image"><img src="images/NhaTro2.jpg"   alt=""></div>
-						<div class="course_body">
-							<h3 class="course_title"><a href="course.html">Phòng cho thuê như căn hộ mini</a></h3>
-							<div class="course_teacher">Phạm Hữu Nam</div>
-							<div class="course_text">
-								<p>26/42 Tân Sơn Nhì, p.Tân Sơn Nhì, Q.Tân Phú, TP.HCM ,</p>
-							</div>
-						</div>
-						<div class="course_footer">
-							<div class="course_footer_content d-flex flex-row align-items-center justify-content-start">
-								<div class="course_info">
-									<i class="fa fa-graduation-cap" aria-hidden="true"></i>
-									<span>5 Phòng</span>
-								</div>
-								<div class="course_info">
-									<i class="fa fa-star" aria-hidden="true"></i>
-									<span>5 Sao</span>
-								</div>
-								<div class="course_price ml-auto">4000K</div>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<!-- Course -->
-				<div class="col-lg-4 course_col">
-					<div class="course">
-						<div class="course_image"><img src="images/NhaTro3.jpg" alt="" ></div>
-						<div class="course_body">
-							<h3 class="course_title"><a href="course.html">Phòng Trọ giá rẻ</a></h3>
-							<div class="course_teacher">Nguyễn Hoàng Long</div>
-							<div class="course_text">
-								<p>Cuối Hẻm 44 Ngô Tất Tố, phường 19, quận Bình Thạnh, 19, Bình Thạnh, Hồ Chí Minh</p>
-							</div>
-						</div>
-						<div class="course_footer">
-							<div class="course_footer_content d-flex flex-row align-items-center justify-content-start">
-								<div class="course_info">
-									<i class="fa fa-graduation-cap" aria-hidden="true"></i>
-									<span>1 Phòng</span>
-								</div>
-								<div class="course_info">
-									<i class="fa fa-star" aria-hidden="true"></i>
-									<span>5 Sao</span>
-								</div>
-								<div class="course_price ml-auto">220K</div>
-							</div>
-						</div>
-					</div>
-				</div>
-
 			</div>
+			<div class="row courses_row">
+					<!-- Course -->
+					<div class="col-lg-4 course_col">
+							<div class="course">
+								<div class="course_image"><img src="images/NhaTro1.jpg"  alt=""></div>
+								<div class="course_body">
+									<h3 class="course_title"><a href="course.html">KTX Cao Cấp</a></h3>
+									<div class="course_teacher">Phạm Thị Hoa</div>
+									<div class="course_text">
+										<p>Số 84 Giải Phóng, Phường 4, Quận Tân Bình</p>
+									</div>
+								</div>
+								<div class="course_footer">
+									<div class="course_footer_content d-flex flex-row align-items-center justify-content-start">
+										<div class="course_info">
+											<i class="fa fa-graduation-cap" aria-hidden="true"></i>
+											<span>20 Phòng</span>
+										</div>
+										<div class="course_info">
+											<i class="fa fa-star" aria-hidden="true"></i>
+											<span>5 Sao</span>
+										</div>
+										<div class="course_price ml-auto">450K</div>
+									</div>
+								</div>
+							</div>
+						</div>
+		
+						<!-- Course -->
+						<div class="col-lg-4 course_col">
+							<div class="course">
+								<div class="course_image"><img src="images/NhaTro2.jpg"   alt=""></div>
+								<div class="course_body">
+									<h3 class="course_title"><a href="course.html">Phòng cho thuê như căn hộ mini</a></h3>
+									<div class="course_teacher">Phạm Hữu Nam</div>
+									<div class="course_text">
+										<p>26/42 Tân Sơn Nhì, p.Tân Sơn Nhì, Q.Tân Phú, TP.HCM ,</p>
+									</div>
+								</div>
+								<div class="course_footer">
+									<div class="course_footer_content d-flex flex-row align-items-center justify-content-start">
+										<div class="course_info">
+											<i class="fa fa-graduation-cap" aria-hidden="true"></i>
+											<span>5 Phòng</span>
+										</div>
+										<div class="course_info">
+											<i class="fa fa-star" aria-hidden="true"></i>
+											<span>5 Sao</span>
+										</div>
+										<div class="course_price ml-auto">4000K</div>
+									</div>
+								</div>
+							</div>
+						</div>
+		
+						<!-- Course -->
+						<div class="col-lg-4 course_col">
+							<div class="course">
+								<div class="course_image"><img src="images/NhaTro3.jpg" alt="" ></div>
+								<div class="course_body">
+									<h3 class="course_title"><a href="course.html">Phòng Trọ giá rẻ</a></h3>
+									<div class="course_teacher">Nguyễn Hoàng Long</div>
+									<div class="course_text">
+										<p>Cuối Hẻm 44 Ngô Tất Tố, phường 19, quận Bình Thạnh, 19, Bình Thạnh, Hồ Chí Minh</p>
+									</div>
+								</div>
+								<div class="course_footer">
+									<div class="course_footer_content d-flex flex-row align-items-center justify-content-start">
+										<div class="course_info">
+											<i class="fa fa-graduation-cap" aria-hidden="true"></i>
+											<span>1 Phòng</span>
+										</div>
+										<div class="course_info">
+											<i class="fa fa-star" aria-hidden="true"></i>
+											<span>5 Sao</span>
+										</div>
+										<div class="course_price ml-auto">220K</div>
+									</div>
+								</div>
+							</div>
+						</div>
+			</div>
+			
 			<div class="row">
 				<div class="col">
 					<div class="courses_button trans_200"><a href="#">Xem Thêm...</a></div>
@@ -410,17 +411,17 @@
 		</div>
 	</div>
 
+
 	
-	
-	<!-- Kinh Nghiệm -->
+	<!-- Ở ghép -->
 
 	<div class="events">
 		<div class="container">
 			<div class="row">
 				<div class="col">
 					<div class="section_title_container text-center">
-						<h2 class="section_title">KỸ NĂNG CẦN THIẾT</h2>
-						<div class="section_subtitle"><p>Kỹ năng cần thiết - KỸ NĂNG MỀM là kênh riêng biệt của đội ngũ NHATTRO.COM nhằm giới thiệu các bạn những kỹ năng cần thiết. Đặc biệt là với sinh viên</p></div>
+						<h2 class="section_title">TÌM BẠN Ở CHUNG</h2>
+						<div class="section_subtitle"><p>TIN TƯỞNG - HỢP Ý LÀ YẾU TỐ QUAN TRỌNG ĐỂ CÁC BẠN CÓ THỂ TÌM BẠN CHUNG TRỌ LÝ TƯỞNG</p></div>
 					</div>
 				</div>
 			</div>
@@ -435,15 +436,11 @@
 								
 							</div>
 							<div class="event_content">
-								<div class="event_title"><a href="#">KINH NGHIỆM THUÊ NHÀ TRỌ</a></div>
+								<div class="event_title"><a href="#">Cần một bạn nữ</a></div>
 								<div class="event_info_container">
-									<div class="event_info"><i class="fa fa-map-marker" aria-hidden="true"></i><span>facebook/THAPSANGNIEMTIN</span></div>
+									<div class="event_info"><i class="fa fa-map-marker" aria-hidden="true"></i><span>Lê Văn Việt, Quận 9, Tp.HCM</span></div>
 									<div class="event_text">
-										<p>Ta có thể chia nhà trọ thành 4 dạng như sau:
-											1. Nhà trọ
-											2. Nhà nguyên căn
-											3. Ở ghép chung chủ
-											4. Chung cư</p>
+										<p>Vui vẻ, hòa đồng, không tính toán</p>
 									</div>
 								</div>
 							</div>
@@ -459,11 +456,11 @@
 							<div class="event_date">
 							</div>
 							<div class="event_content">
-								<div class="event_title"><a href="#">Những điều cần biết khi tìm phòng trọ</a></div>
+								<div class="event_title"><a href="#">Share Phòng 3 người cần thêm 1 người</a></div>
 								<div class="event_info_container">
-									<div class="event_info"><i class="fa fa-map-marker" aria-hidden="true"></i><span>zing.vn</span></div>
+									<div class="event_info"><i class="fa fa-map-marker" aria-hidden="true"></i><span>Cầu tiêu, quận 3</span></div>
 									<div class="event_text">
-										<p>Với những tân sinh viên lần đầu tiên đi tìm phòng trọ chắc hẳn sẽ gặp khá nhiều khó khăn do chưa có kinh nghiệm. Dưới đây là một số điều bạn cần biết khi tìm phòng trọ nhé.</p>
+										<p>Diện tích 20mX2, Tiền điện 2000k, nước 10K...</p>
 									</div>
 								</div>
 							</div>
@@ -479,11 +476,11 @@
 							<div class="event_date">
 							</div>
 							<div class="event_content">
-								<div class="event_title"><a href="#">Những điều phải lưu ý khi ở trọ một mình</a></div>
+								<div class="event_title"><a href="#">Tuyển người ở ghép</a></div>
 								<div class="event_info_container">
-									<div class="event_info"><i class="fa fa-map-marker" aria-hidden="true"></i><span></span></div>
+									<div class="event_info"><i class="fa fa-map-marker" aria-hidden="true"></i><span>Thủ dầu 1, tphcm</span></div>
 									<div class="event_text">
-										<p>Đời sống sinh viên – tầng lớp trẻ, tri thức hiện nay đang ngày càng được nâng cao và có phần dư dả hơn xưa. Quay ngược chiếc kim đồng trở về những năm 2000, dưới lăng kính bộ phim “phía trước là bầu trời” đang comback, góc nhìn cuộc sống sinh viên thời đó khá vất vả, phòng trọ ẩm thấp, chật chội hơn chúng ta bây giờ.</p>
+										<p>Tuyển một bạn nữ ở ghép, tính tình cọp cái, hung dữ, càn dữ càng tốt ...</p>
 									</div>
 								</div>
 							</div>
@@ -492,6 +489,12 @@
 				</div>
 
 			</div>
+			<div class="row">
+					<div class="col">
+						<div class="courses_button trans_200"><a href="#">Xem Thêm...</a></div>
+					</div>
+				</div>
+			
 		</div>
 	</div>
 
@@ -504,8 +507,8 @@
 			<div class="row">
 				<div class="col">
 					<div class="section_title_container text-center">
-						<h2 class="section_title">TIN TỨC CẬP NHẬT</h2>
-						<div class="section_subtitle"><p>Kênh thông tin của chúng tôi được cập nhật liên tục</p></div>
+						<h2 class="section_title">VIỆC LÀM THÊM</h2>
+						<div class="section_subtitle"><p>KÊNH THÔNG TIN GIÚP CÁC BẠN KIẾM THÊM THU NHẬP</p></div>
 					</div>
 				</div>
 			</div>
@@ -583,96 +586,7 @@
 			</div>
 		</div>
 	</div>
-<!-- Team -->
 
-<div class="team">
-	<div class="team_background parallax-window" data-parallax="scroll" data-image-src="images/team_background.jpg" data-speed="0.8"></div>
-	<div class="container">
-		<div class="row">
-			<div class="col">
-				<div class="section_title_container text-center">
-					<h2 class="section_title">ĐỘI NGŨ PHÁT TRIỂN NHATTRO.COM</h2>
-				<!--	<div class="section_subtitle"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel gravida arcu. Vestibulum feugiat, sapien ultrices fermentum congue, quam velit venenatis sem</p></div>-->
-				</div>
-			</div>
-		</div>
-		<div class="row team_row">
-			
-			<!-- Team Item -->
-			<div class="col-lg-3 col-md-6 team_col">
-				<div class="team_item">
-					<div class="team_image"><img src="images/team_1.jpg" alt=""></div>
-					<div class="team_body">
-						<div class="team_title"><a href="#">Jacke Masito</a></div>
-						<div class="team_subtitle">Marketing & Management</div>
-						<div class="social_list">
-							<ul>
-								<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<!-- Team Item -->
-			<div class="col-lg-3 col-md-6 team_col">
-				<div class="team_item">
-					<div class="team_image"><img src="images/team_2.jpg" alt=""></div>
-					<div class="team_body">
-						<div class="team_title"><a href="#">William James</a></div>
-						<div class="team_subtitle">Designer & Website</div>
-						<div class="social_list">
-							<ul>
-								<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<!-- Team Item -->
-			<div class="col-lg-3 col-md-6 team_col">
-				<div class="team_item">
-					<div class="team_image"><img src="images/team_3.jpg" alt=""></div>
-					<div class="team_body">
-						<div class="team_title"><a href="#">John Tyler</a></div>
-						<div class="team_subtitle">Quantum mechanics</div>
-						<div class="social_list">
-							<ul>
-								<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<!-- Team Item -->
-			<div class="col-lg-3 col-md-6 team_col">
-				<div class="team_item">
-					<div class="team_image"><img src="images/team_4.jpg" alt=""></div>
-					<div class="team_body">
-						<div class="team_title"><a href="#">Veronica Vahn</a></div>
-						<div class="team_subtitle">Math & Physics</div>
-						<div class="social_list">
-							<ul>
-								<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-
-		</div>
-	</div>
-</div>
 	<!-- Newsletter -->
 
 	<div class="newsletter">
